--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <p>
   <a routerLink="">DisplayHelloWorld</a>  |
+  <a routerLink="showhellobutton">ShowHelloButton</a> |
 </p>
 <router-outlet></router-outlet>
