3rd commit add displayname

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <p>
   <a routerLink="">DisplayHelloWorld</a>  |
   <a routerLink="showhellobutton">ShowHelloButton</a> |
+  <a routerLink="displayname">DisplayName</a> |
 </p>
 <router-outlet></router-outlet>
