--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
   <a routerLink="">DisplayHelloWorld</a>  |
   <a routerLink="showhellobutton">ShowHelloButton</a> |
   <a routerLink="displayname">DisplayName</a> |
+  <a routerLink="counter">Counter</a> |
 </p>
 <router-outlet></router-outlet>
