--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
   <a routerLink="showhellobutton">ShowHelloButton</a> |
   <a routerLink="displayname">DisplayName</a> |
   <a routerLink="counter">Counter</a> |
+  <a routerLink="simpleform">Simpleform</a> |
 </p>
 <router-outlet></router-outlet>
