6th commit add userage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,7 @@
   <a routerLink="displayname">DisplayName</a> |
   <a routerLink="counter">Counter</a> |
   <a routerLink="simpleform">Simpleform</a> |
+  <a routerLink="userage">Userage</a> |
+
 </p>
 <router-outlet></router-outlet>
