--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   <a routerLink="counter">Counter</a> |
   <a routerLink="simpleform">Simpleform</a> |
   <a routerLink="userage">Userage</a> |
+  <a routerLink="usergreeting">Usergreeting</a> |
 
 </p>
 <router-outlet></router-outlet>
