8th commit add calculator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
   <a routerLink="simpleform">Simpleform</a> |
   <a routerLink="userage">Userage</a> |
   <a routerLink="usergreeting">Usergreeting</a> |
+  <a routerLink="calculator">calculator</a> |
 
 </p>
 <router-outlet></router-outlet>
