--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
   <a routerLink="userage">Userage</a> |
   <a routerLink="usergreeting">Usergreeting</a> |
   <a routerLink="calculator">calculator</a> |
+  <a routerLink="textlength">Textlength</a> |
 
 </p>
 <router-outlet></router-outlet>
