--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
   <a routerLink="usergreeting">Usergreeting</a> |
   <a routerLink="calculator">calculator</a> |
   <a routerLink="textlength">Textlength</a> |
+  <a routerLink="currencyconverter">Currencyconverter</a> |
 
 </p>
 <router-outlet></router-outlet>
