11th commit add evenoddchecker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
   <a routerLink="calculator">calculator</a> |
   <a routerLink="textlength">Textlength</a> |
   <a routerLink="currencyconverter">Currencyconverter</a> |
+  <a routerLink="evenoddchecker">Evenoddchecker</a> |
 
 </p>
 <router-outlet></router-outlet>
