12th commit add wordreverser

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
   <a routerLink="textlength">Textlength</a> |
   <a routerLink="currencyconverter">Currencyconverter</a> |
   <a routerLink="evenoddchecker">Evenoddchecker</a> |
+  <a routerLink="wordreverser">Wordreverser</a> |
 
 </p>
 <router-outlet></router-outlet>
