13th commit add showdate

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
   <a routerLink="currencyconverter">Currencyconverter</a> |
   <a routerLink="evenoddchecker">Evenoddchecker</a> |
   <a routerLink="wordreverser">Wordreverser</a> |
+  <a routerLink="showdate">Showdate</a> |
 
 </p>
 <router-outlet></router-outlet>
