14th commit add showusername

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
   <a routerLink="evenoddchecker">Evenoddchecker</a> |
   <a routerLink="wordreverser">Wordreverser</a> |
   <a routerLink="showdate">Showdate</a> |
+  <a routerLink="showusername">Showusername</a> |
 
 </p>
 <router-outlet></router-outlet>
