15th commit add multiplicationtable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,9 @@
   <a routerLink="wordreverser">Wordreverser</a> |
   <a routerLink="showdate">Showdate</a> |
   <a routerLink="showusername">Showusername</a> |
+  <a routerLink="multiplicationtable">Multiplicationtable</a> |
+
+
 
 </p>
 <router-outlet></router-outlet>
