--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
   <a routerLink="showdate">Showdate</a> |
   <a routerLink="showusername">Showusername</a> |
   <a routerLink="multiplicationtable">Multiplicationtable</a> |
+  <a routerLink="simplelogin">Simplelogin</a> |
 
 
 
