--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
   <a routerLink="simplelogin">Simplelogin</a> |
   <a routerLink="fahrenheittocelsius">Fahrenheittocelsius</a> |
   <a routerLink="bookmarklist">Bookmarklist</a> |
+  <a routerLink="charactercounter">Charactercounter</a> |
 
 
 
