21th commit add temperatureconverter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,7 @@
   <a routerLink="bookmarklist">Bookmarklist</a> |
   <a routerLink="charactercounter">Charactercounter</a> |
   <a routerLink="palindromechecker">Palindromechecker</a> |
-
-
+  <a routerLink="temperatureconverter">Temperatureconverter</a> |
 
 
 </p>
