22th commit add shoppinglist

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,7 @@
   <a routerLink="charactercounter">Charactercounter</a> |
   <a routerLink="palindromechecker">Palindromechecker</a> |
   <a routerLink="temperatureconverter">Temperatureconverter</a> |
+  <a routerLink="shoppinglist">Shoppinglist</a> |
 
 
 </p>
