25th commit add guessnumbergame

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
   <a routerLink="shoppinglist">Shoppinglist</a> |
   <a routerLink="factorialcalculator">Factorialcalculator</a> |
   <a routerLink="todomanager">Todomanager</a> |
+  <a routerLink="guessnumbergame">Guessnumbergame</a> |
 
 
 </p>
