26th commit add wordcounter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,7 @@
   <a routerLink="factorialcalculator">Factorialcalculator</a> |
   <a routerLink="todomanager">Todomanager</a> |
   <a routerLink="guessnumbergame">Guessnumbergame</a> |
+  <a routerLink="wordcounter">Wordcounter</a> |
 
 
 </p>
