--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,7 @@
   <a routerLink="todomanager">Todomanager</a> |
   <a routerLink="guessnumbergame">Guessnumbergame</a> |
   <a routerLink="wordcounter">Wordcounter</a> |
+  <a routerLink="randomnumbergenerator">Randomnumbergenerator</a> |
 
 
 </p>
