--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,8 @@
   <a routerLink="wordcounter">Wordcounter</a> |
   <a routerLink="randomnumbergenerator">Randomnumbergenerator</a> |
   <a routerLink="multiplicationchecker">Multiplicationchecker</a> |
+  <a routerLink="uppercaseconverter">Uppercaseconverter</a> |
+
 
 
 </p>
