--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,7 @@
   <a routerLink="multiplicationchecker">Multiplicationchecker</a> |
   <a routerLink="uppercaseconverter">Uppercaseconverter</a> |
   <a routerLink="wordshuffler">Wordshuffler</a> |
+  <a routerLink="bmisolver">Bmisolver</a> |
 
 
 
