--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,7 @@
   <a routerLink="uppercaseconverter">Uppercaseconverter</a> |
   <a routerLink="wordshuffler">Wordshuffler</a> |
   <a routerLink="bmisolver">Bmisolver</a> |
+  <a routerLink="usernamevalidator">Usernamevalidator</a> |
 
 
 
