--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,7 @@
   <a routerLink="wordshuffler">Wordshuffler</a> |
   <a routerLink="bmisolver">Bmisolver</a> |
   <a routerLink="usernamevalidator">Usernamevalidator</a> |
+  <a routerLink="interestcalculator">Interestcalculator</a> |
 
 
 
