34th commit add compoundinterestcalculator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,7 @@
   <a routerLink="bmisolver">Bmisolver</a> |
   <a routerLink="usernamevalidator">Usernamevalidator</a> |
   <a routerLink="interestcalculator">Interestcalculator</a> |
+  <a routerLink="compoundinterestcalculator">Compoundinterestcalculator</a> |
 
 
 
