--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,6 +34,7 @@
   <a routerLink="interestcalculator">Interestcalculator</a> |
   <a routerLink="compoundinterestcalculator">Compoundinterestcalculator</a> |
   <a routerLink="fibonaccigenerator">Fibonaccigenerator</a> |
+  <a routerLink="oddsumcalculator">Oddsumcalculator</a> |
 
 
 
