--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,6 +37,7 @@
   <a routerLink="oddsumcalculator">Oddsumcalculator</a> |
   <a routerLink="currencyformatter">Currencyformatter</a> |
   <a routerLink="randomquotedisplay">Randomquotedisplay</a> |
+  <a routerLink="uppercasegreeting">Uppercasegreeting</a> |
 
 
 
