40th commit add divisiblechecker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,7 @@
   <a routerLink="currencyformatter">Currencyformatter</a> |
   <a routerLink="randomquotedisplay">Randomquotedisplay</a> |
   <a routerLink="uppercasegreeting">Uppercasegreeting</a> |
+  <a routerLink="divisiblechecker">Divisiblechecker</a> |
 
 
 
