42th commit add SpeedConverter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,8 @@
   <a routerLink="randomquotedisplay">Randomquotedisplay</a> |
   <a routerLink="uppercasegreeting">Uppercasegreeting</a> |
   <a routerLink="divisiblechecker">Divisiblechecker</a> |
-  <a routerLink="rgbto-hex-converter">RGBtoHexConverter</a> |
+  <a routerLink="rgbto-hex-converter">RGBtoHexConverter </a> |
+  <a routerLink="speed-converter">SpeedConverter </a> |
 
 
 
