--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,7 @@
   <a routerLink="divisiblechecker">Divisiblechecker</a> |
   <a routerLink="rgbto-hex-converter">RGBtoHexConverter </a> |
   <a routerLink="speed-converter">SpeedConverter </a> |
+  <a routerLink="leap-year-checker">leapYearChecker </a> |
 
 
 
