44th commit add DayDifferenceCalculator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<p>
+<nav>
   <a routerLink="">DisplayHelloWorld</a>  |
   <a routerLink="showhellobutton">ShowHelloButton</a> |
   <a routerLink="displayname">DisplayName</a> |
@@ -42,8 +42,9 @@
   <a routerLink="rgbto-hex-converter">RGBtoHexConverter </a> |
   <a routerLink="speed-converter">SpeedConverter </a> |
   <a routerLink="leap-year-checker">leapYearChecker </a> |
+  <a routerLink="day-difference-calculator">DayDifferenceCcalculator </a> |
+
+</nav>
 
 
-
-</p>
 <router-outlet></router-outlet>
