45th commit add PythagoreanTheoremSolver

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,7 @@
   <a routerLink="speed-converter">SpeedConverter </a> |
   <a routerLink="leap-year-checker">leapYearChecker </a> |
   <a routerLink="day-difference-calculator">DayDifferenceCcalculator </a> |
+  <a routerLink="pythagorean-theorem-solver">PythagoreanTheoremSolver </a> |
 
 </nav>
 
