46th commit add LanguageTranslator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,6 +44,7 @@
   <a routerLink="leap-year-checker">leapYearChecker </a> |
   <a routerLink="day-difference-calculator">DayDifferenceCcalculator </a> |
   <a routerLink="pythagorean-theorem-solver">PythagoreanTheoremSolver </a> |
+  <a routerLink="language-translator">LanguageTranslator </a> |
 
 </nav>
 
