47th commit add Virtual Pet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,6 +45,7 @@
   <a routerLink="day-difference-calculator">DayDifferenceCcalculator </a> |
   <a routerLink="pythagorean-theorem-solver">PythagoreanTheoremSolver </a> |
   <a routerLink="language-translator">LanguageTranslator </a> |
+  <a routerLink="virtual-pet">Virtual-Pet </a> |
 
 </nav>
 
