48th commit add DailyJournal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,6 +46,7 @@
   <a routerLink="pythagorean-theorem-solver">PythagoreanTheoremSolver </a> |
   <a routerLink="language-translator">LanguageTranslator </a> |
   <a routerLink="virtual-pet">Virtual-Pet </a> |
+  <a routerLink="daily-journal">DailyJournal </a> |
 
 </nav>
 
