--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,6 +47,7 @@
   <a routerLink="language-translator">LanguageTranslator </a> |
   <a routerLink="virtual-pet">Virtual-Pet </a> |
   <a routerLink="daily-journal">DailyJournal </a> |
+  <a routerLink="expense-splitter">ExpenseSplitter </a> |
 
 </nav>
 
