50th commit add MindMap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,6 +48,7 @@
   <a routerLink="virtual-pet">Virtual-Pet </a> |
   <a routerLink="daily-journal">DailyJournal </a> |
   <a routerLink="expense-splitter">ExpenseSplitter </a> |
+  <a routerLink="mind-map">Mind-Map</a> |
 
 </nav>
 
